--- a/views/email/baseEmail.pug
+++ b/views/email/baseEmail.pug
@@ -37,7 +37,7 @@ html
                   tbody
                     tr
                       td.content-block
-                        span.apple-link Yatra Inc, 123 Nowhere Road, San Francisco CA 99999
+                        span.apple-link Travelu Inc, 123 Nowhere Road, San Francisco CA 99999
                         br
                         |  Don't like these emails? 
                         a(href='#') Unsubscribe
